<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearForgotPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPassword.ForgotPassword">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@drawable/question_mark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_pass"
                android:textAlignment="center"
                android:textColor="@color/primaryColorDark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/insertEmail"
                android:textAlignment="center"
                android:textColor="@color/primaryColorDark"
                android:textSize="15sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColorDark"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColorHint="@color/primaryColorLight"
                app:hintTextAppearance="@style/EdittextAppearance">

                <EditText
                    android:id="@+id/forgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColorDark"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryTextColor" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnResetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_button"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>