<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".Signup.Signup">

    <RelativeLayout
        android:id="@+id/signrelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<com.github.florent37.diagonallayout.DiagonalLayout-->
            <!--android:id="@+id/diagonalLayout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:background="@drawable/gradient1"-->
            <!--app:diagonal_angle="10"-->
            <!--app:diagonal_direction="left"-->
            <!--app:diagonal_position="bottom">-->

        <!--</com.github.florent37.diagonallayout.DiagonalLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/create_account"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColorDark"
                    android:hint="@string/username"
                    android:textColorHint="@color/primaryColorLight"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/EdittextAppearance">

                    <EditText
                        android:id="@+id/createUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primaryColorDark"
                        android:textColor="@color/secondaryTextColor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColorDark"
                    android:hint="@string/assessor_regist_number"
                    android:textColorHint="@color/primaryColorLight"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/EdittextAppearance">

                    <EditText
                        android:id="@+id/createRegistrationNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primaryColorDark"
                        android:textColor="@color/secondaryTextColor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColorDark"
                    android:hint="@string/email"
                    android:textColorHint="@color/primaryColorLight"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/EdittextAppearance">

                    <EditText
                        android:id="@+id/createEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primaryColorDark"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/secondaryTextColor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColorDark"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/primaryColorLight"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/EdittextAppearance">

                    <EditText
                        android:id="@+id/createFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primaryColorDark"
                        android:textColor="@color/secondaryTextColor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColorDark"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/primaryColorLight"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/EdittextAppearance">

                    <EditText
                        android:id="@+id/createLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primaryColorDark"
                        android:textColor="@color/secondaryTextColor" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primaryColorDark"
                        android:hint="@string/place_of_birth"
                        android:textColorHint="@color/primaryColorLight"
                        app:hintAnimationEnabled="true"
                        app:hintTextAppearance="@style/EdittextAppearance">

                        <EditText
                            android:id="@+id/create_tempat_lahir"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/primaryColorDark"
                            android:textColor="@color/secondaryTextColor" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/pick_date"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/birthdate" />

                    <TextView
                        android:id="@+id/create_tgl_lahir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="00-00-0000"
                        android:textColor="@color/primaryColorDark"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/primaryColorDark" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/lakilaki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primaryColorDark"
                        android:text="@string/male"
                        android:textColor="@color/primaryColorDark" />

                    <RadioButton
                        android:id="@+id/perempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:buttonTint="@color/primaryColorDark"
                        android:text="@string/female"
                        android:textColor="@color/primaryColorDark" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColorDark"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/primaryColorLight"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/EdittextAppearance">

                    <EditText
                        android:id="@+id/createTelp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primaryColorDark"
                        android:inputType="number"
                        android:textColor="@color/secondaryTextColor" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/createSignature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:elevation="10dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/signature"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/signatureStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryColorDark"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_button"
                android:elevation="10dp"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/btn_create_account"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:translationY="-3dp" />
        </LinearLayout>

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="170dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:src="@drawable/nas_logo" />-->

    </RelativeLayout>

</ScrollView>