<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_profile_management"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/level_management_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/position"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/level_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/level_management_label"
            android:textColor="@color/secondaryTextColor" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/address_management_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/address"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_management_label"
            android:textColor="@color/secondaryTextColor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/contact_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/phone_number"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_label"
            android:textColor="@color/secondaryTextColor" />
    </RelativeLayout>

</LinearLayout>